# Micro-Boss

./: .env.example  .env.local  .gitignore  CONTRIBUTING.md  DOCUMENTATION.md  ImplementationPlan.md  README.md  Tracker.md  cypress.config.js  example.test.js  factorial_test.py  install.sh  jest.config.js  jest.setup.js  package-lock.json  package.json  prettier.config.js  pyproject.toml
.github/workflows/: ci.yml
cypress/e2e/: dashboard.cy.js  login.cy.js  task-details.cy.js  task-form.cy.js
microboss/: __init__.py  cli.py
microboss-frontend/: .gitignore  example.test.js  package-lock.json  package.json
microboss-frontend/src/: basic.test.js
microboss/core/: __init__.py  agent.py
microboss/utils/: __init__.py  api.py  execution.py  file_utils.py  logging.py  viz.py
microboss/web/: __init__.py  app.py  helpers.py  services.py
run/20250307_043646_task_calculate_the_factorial_of_10/: main.py
run/20250307_044720_task_calculate_the_factorial_of_10/: main.py
run/20250307_045314_task_calculate_the_factorial_of_10/: main.py
run/20250307_051450_task_generate_a_fibonacci_sequence_up_to_the_20th_numbe/: main.py  result.json
run/20250307_051520_task_call_the_function_with_the_number_10_and_print_the/: main.py
run/20250307_051534_task_generate_a_fibonacci_sequence_up_to_the_20th_numbe/: results.json
run/20250307_051536_task_define_a_function_to_generate_the_fibonacci_sequen/: results.json
run/20250307_051538_task_define_a_function_to_generate_the_fibonacci_sequen/: main.py
src/: middleware.ts
src/app/: layout.tsx  page.tsx  (+1 more)
test_env/: pyvenv.cfg
(+142 files in other folders)
